1998-10-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* bindings.desc: added mkdir, site.

	* util.h, util.c (args_to_string): new function.

	* ftp.h, ftp.c (ftp_site): new function.

	* fntable.fn, fn_basic.c (fn_site): new function.

1998-10-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_stor): accept response 125.

1998-10-07  Wiz  <wiz@danbala.tuwien.ac.at>

	* fn_select.c (fn_reload): reload logically current dir, not
	physically current.

	* bindings.desc, fn_basic.c (fn_showname): new option -l: show
	link target.

	* readdir.c (parse_unix): better parsing of symbolic links (Windows).

	* display.c: removed include for termcap.h

	* main.c (main): if startdir is file, download.

1998-05-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fputchar.c (fputchar): return a value.

	* main.c, tty.h, display.h, fn_tag.c, tag.h: cleanup for -Wall.

1998-05-01  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* directory.c, tty.h: cleanup for -Wall.

1998-04-30  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* signals.c: cleanup for -Wall

	* util.c (parse_url, deurl, hexdigit): moved from main.c

1998-04-25  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_basic.c (fn_mkdir): new function.

	* ftp.c (ftp_mkdir): new funktion.

1998-03-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cwd, ftp_pwd): handle DOS servers with leading '\\'
	in directory names.

1998-03-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cat): new parameter start.  callers changed.

1998-02-27  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_retr): new parameter startp.  callers changed.

	* fn_tag.c (fn_gettags): new option -c: restart.

	* fn_select.c (aux_download): new parameter restart.  callers
	changed.

	* tty.c (tty_readkey): fixed handling of 8 bit chars (s now
	unsigned char).

1998-01-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_scroll.c (aux_scroll_page): fixed page scrolling when listing
	is shorter than screen.
