@@ -4,6 +4,7 @@ Thanks to these people for suggestions and testing:
 
 Adrian Bridgett <adrian.bridgett@poboxes.com>
 Armin Obersteiner <armin@giga.or.at>
+James Antwill <james@tainted.org>
 Konrad Neuwirth <konrad@smc.univie.ac.at>
 Larry Ayers <layers@marktwain.net>
 Thanh Ma <tma@encore.com>
